# GOTCHA

./: .gitignore  LICENSE  README.md  attack_bench.py  attack_pair_sweep.py  attack_resistance_sweep.py  attack_sweep.py  generate_baseline.py  generate_defense.py  pyproject.toml  text_noise_video.py  text_noise_video_defense.py
archive/: README.md  diagnostic_attacks.py
docs/: 05-running-the-code.md
