[project]
name = "noise-captcha"
version = "0.1.0"
description = "Hide text in visual noise so humans can read it but algorithms can't"
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [{ name = "Mike Maik" }]
dependencies = [
    "numpy>=2.0,<3.0",
    "pillow>=11.0,<12.0",
    "imageio>=2.36,<3.0",
    "imageio-ffmpeg>=0.5,<0.6",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
